--- a/Log Manager/Properties/Settings.settings
+++ b/Log Manager/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">C:\Datalog_Manager</Value>
     </Setting>
     <Setting Name="FTP" Type="System.String" Scope="User">
-      <Value Profile="(Default)">ftp://10.201.192.227/DataLOG/</Value>
+      <Value Profile="(Default)">ftp://10.208.180.20/DataLOG/</Value>
     </Setting>
     <Setting Name="Log1" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:\Agilent_ICT\log\testplan.txt</Value>
@@ -15,13 +15,13 @@
       <Value Profile="(Default)">C:\Agilent3070\log\testplan.txt</Value>
     </Setting>
     <Setting Name="user" Type="System.String" Scope="User">
-      <Value Profile="(Default)">apple</Value>
+      <Value Profile="(Default)">testlog</Value>
     </Setting>
     <Setting Name="password" Type="System.String" Scope="User">
-      <Value Profile="(Default)">pa31597</Value>
+      <Value Profile="(Default)">testlog1234</Value>
     </Setting>
     <Setting Name="LogMaster" Type="System.String" Scope="User">
-      <Value Profile="(Default)">ftp://10.201.192.227/LogMaster/</Value>
+      <Value Profile="(Default)">ftp://10.208.180.20/LogMaster/</Value>
     </Setting>
   </Settings>
 </SettingsFile>
